# earthquake_api

./: .env.example  ASSUMPTIONS_LIMITATIONS.md  Earthquake.postman_collection.json  Makefile  OPTIMIZATIONS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start_pipe.sh
alembic/: env.py
alembic/versions/: 59d03fdb7c38_event_id_as_unique.py  5a89352b9e79_add_table_features.py  5fb7e63806a6_add_execution_logs.py  abc8052901ac_create_table_metadata.py  bd706efb78ca_metadata_id_in_execution_logs.py  f9a15b4bd25c_nullable_metadata_id_in_execution_logs.py
src/: __init__.py  logger.py
src/api/: __init__.py  base_api.py
src/api/clients/: usgs_earthquake_client.py
src/app/: main.py
src/app/config/: config.py  params.py
src/app/core/: config.py
src/app/database/: config.py
src/app/database/models/: __init__.py  base.py  execution_logs.py  features.py  metadata.py  metadatas.py
src/app/domains/: earthquake_service.py
src/app/domains/features/: endpoints.py  schema.py
src/app/domains/visualization/: endpoints.py  schema.py
src/app/middlewares/: authentication.py  constants.py  database_session.py  execution_logs.py
src/app/repositories/: database_repository.py
src/clients/: __init__.py  usgs_earthquake_client.py
src/data_integration/: earthquake_usgs.py  helpers.py
